--- a/music.app/src/main/resources/application.properties
+++ b/music.app/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-# config para la conexion a MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/melody_craze_app
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/melody_craze_app
+#spring.datasource.username=root
+#spring.datasource.password=password123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# config adicional
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
